@@ -200,26 +200,34 @@ bool ParseSeeYou(WaypointFactory factory, Waypoints &waypoints, BufferedReader &
   std::array<std::string_view,14> params;
 
   bool tasks { false };
+  bool first_line = true;
 
-  // Headers
-  {
-    params_num = ReadCsvRecord(reader, params);
-
-    // Empty file
-    if (params_num == 0)
-      return false;
-
-    // Newer cup/cupx specification adds rwwidth, shifts freq and desc right, and adds userdata, and pics
-    if ( params_num > iRWWidth &&
-         params[iRWWidth] == "rwwidth"sv ) {
-      iFrequency = 10;
-      iDescription = 11;
-    }
-  }
-
-  // Waypoints
   while ( true ) {
     params_num = ReadCsvRecord(reader, params);
+
+    // first line of file
+    if (first_line) {
+      first_line = false;
+
+      // Empty file
+      if (params_num == 0)
+        return false;
+
+      // Check whether this is a header (a line with only field names).
+      if (StringIsEqualIgnoreCase(params[iLatitude],"lat"sv)) {
+
+        /*
+         * Newer cup/cupx specification adds rwwidth, shifts freq and desc
+         * right, and adds userdata and pics.
+         */
+        if ( params_num > iRWWidth &&
+             params[iRWWidth] == "rwwidth"sv ) {
+          iFrequency = 10;
+          iDescription = 11;
+        }
+        continue;
+      }
+    }
 
     // Tasks section
     tasks = params_num == 1 &&
